# preCog

./: .cog  .gitattributes  .gitignore  CMakeLists.txt  Info.plist  README.md  cakefile.lua  cog  cogfile.lua  cogfile.vs2019.lua  cogfile.xcode.lua  cogger  cogger.cmake.sh  config.h.in  defines.cmake  install.sh  linux-build.sh  mac-build.sh  prebuild.sh  publish.sh  update
cmake/: bootstrap.sh  build.sh  builder  cogger  full-rebuild.sh  install.sh  runCleanAll.sh  runCmake.sh
etc/: runCleanAll.sh  runCmake.sh
include/: cogfile.linux.lua  cogfile.macos.lua  cogfile.qmake.lua  cogfile.wasm.lua  cogfile.win64.lua  options.lua
linux/: build.ninja  cog.rules  gfc.rules  lua.rules  lz4.rules  pal.rules  precog.rules  startup.rules
lua/: cogfile.linux.lua  cogfile.macos.lua  cogfile.wasm.lua  cogfile.win64.lua  options.lua
mac/gfc.xcodeproj/: project.pbxproj
mac/lua.xcodeproj/: project.pbxproj
mac/lz4.xcodeproj/: project.pbxproj
mac/pal.xcodeproj/: project.pbxproj
mac/precog.xcodeproj/: project.pbxproj
mac/precog.xcworkspace/: contents.xcworkspacedata
mac/startup.xcodeproj/: project.pbxproj
ndk/: build.gradle  gradle.properties  settings.gradle
ndk/gfc/: build.gradle
ndk/gfc/src/main/cpp/: CMakeLists.txt  atomic.cpp  boot.cpp  buffer.cpp  class.cpp  f16.cpp  f32.cpp  f64.cpp  fs.cpp  half.cpp  history.cpp  i16.cpp  i32.cpp  i64.cpp  i8.cpp  mem.cpp  mutex.cpp  object.cpp  prefab.cpp  resource.cpp  scratch.cpp  serialize.cpp  sha1.cpp  stdafx.cpp  strings.cpp  thread.cpp  timer.cpp
ndk/lua/: build.gradle
ndk/lua/src/main/cpp/: CMakeLists.txt
ndk/lz4/: build.gradle
ndk/lz4/src/main/cpp/: CMakeLists.txt
ndk/pal/: build.gradle
ndk/pal/src/main/cpp/: CMakeLists.txt
ndk/precog/: build.gradle
ndk/precog/src/main/cpp/: CMakeLists.txt  generator.cpp  luacore.cpp  main.cpp  msvc.cpp  ndk.cpp  ninja.cpp  qmake.cpp  std.cpp  ws.cpp  xcode.cpp
ndk/startup/: build.gradle
ninja/: .ninja_log  build.ninja  cog.rules  gfc.rules  lua.rules  lz4.rules  pal.rules  precog.rules  startup.rules
ninja.arm64/: build.ninja  gfc.rules  lua.rules  lz4.rules  pal.rules  precog.rules  startup.rules
ninja.x64/: build.ninja  gfc.rules  lua.rules  lz4.rules  pal.rules  precog.rules  startup.rules
ninja.x86_64/: build.ninja
project/Cog.xcworkspace/: contents.xcworkspacedata
project/cog.xcodeproj/: project.pbxproj
scripts/: cog  cogfile.lua  config.h  runCleanAll.sh
src/: CMakeLists.txt
src/app/: .CMakeLists.txt.swp  CMakeLists.txt
src/app/include/: .lua.h.swp  cakefile.h  generators.h  luacore.h  std.h  ws.h
src/app/src/: .lua.cpp.swp  .luacore.cpp.swp  cakefile.cpp  generator.cpp  generators.cpp  luacore.cpp  main.cpp  msvc.cpp  pbx.mm  std.cpp  ws.cpp  xcode.cpp
src/applications/: CMakeLists.txt
src/applications/include/: std.h  (+2 more)
src/cogfiles/: cogfile.android.lua  cogfile.linux.lua  cogfile.macos.lua  cogfile.qmake.lua  cogfile.win64.lua  options.lua
src/common/: CMakeLists.txt
src/common/start/: CMakeLists.txt
src/common/start/src/: entry.cpp  stdafx.cpp
src/component/start/: CMakeLists.txt
src/component/start/src/: entry.cpp
src/core/: CMakeLists.txt
src/core/include/eon/: eon.h
src/core/include/eon/gfc/: atomic.h  autoref.h  buffer.h  class.h  container.h  fablet.h  fs.h  history.h  input.h  maths.h  mem.h  mutex.h  object.h  prefab.h  profiler.h  property.h  resource.h  scratch.h  script.h  serialize.h  strings.h  thread.h  times.h  visual.h
src/core/include/eon/gfc/base/: common.h  debug.h  delegate.h  engine.h  gcc.h  llvm.h  msvc.h  release.h
src/core/include/eon/gfc/math/: aabb2.h  aabb3.h  affine2.h  affine3.h  basic.h  capsule.h  color.h  cone.h  constants.h  frustum.h  interpolator.h  matrix3.h  matrix4.h  octree.h  operators.h  plane.h  point2.h  point3.h  qst2.h  qst3.h  quadtree.h  quaternion.h  ray2.h  ray3.h  sphere.h  splines.h  triangle.h  vector2.h  vector3.h  vector4.h
src/core/include/eon/gfc/srutil/event/: event.hpp
src/core/src/: atomic.cpp  boot.cpp  mem.cpp  mutex.cpp  sha1.cpp  thread.cpp
src/core/src/gfc/: buffer.cpp  class.cpp  f16.cpp  f32.cpp  f64.cpp  fs.cpp  history.cpp  i16.cpp  i32.cpp  i64.cpp  i8.cpp  object.cpp  prefab.cpp  resource.cpp  scratch.cpp  script.cpp  serialize.cpp  sha1.h  strings.cpp  timer.cpp
src/core/src/gfc/base/: half.h  murmur3.c
src/engine/: CMakeLists.txt
src/juggle/: CMakeLists.txt
src/juggle/src/: main.cpp
src/lua/: CMakeLists.txt
src/lua/5.3.5/: CMakeLists.txt
src/lua/5.3.5/src/: ldebug.c  loslib.c
src/lz4/: CMakeLists.txt
src/pal/: CMakeLists.txt
src/pal/include/: glue.h
src/pal/src/android/: detect.cpp  glue.cpp  log.cpp  time.cpp
src/pal/src/ios/: detect.mm  glue.mm  log.mm  time.mm
src/pal/src/linux/: detect.cpp  glue.cpp  log.cpp  time.cpp
src/pal/src/osx/: detect.mm  glue.mm  log.mm  time.mm
src/pal/src/wasm/: detect.cpp  glue.cpp  log.cpp
src/pal/src/web/: detect.cpp  glue.cpp  log.cpp  time.cpp
src/pal/src/win/: detect.cpp  glue.cpp  log.cpp  time.cpp
src/pal/src/win/res/: arrow.cur  closeapp.cur  closed.cur  hand.cur  oldarrow.cur  red.rc  resize.cur
tmp/: build.ninja  lua.rules  pal.rules
tmp/cog.xcodeproj/: project.pbxproj
tmp/cog.xcworkspace/: contents.xcworkspacedata
tmp/gfc.xcodeproj/: project.pbxproj
tmp/lua.xcodeproj/: project.pbxproj
tmp/lz4.xcodeproj/: project.pbxproj
tmp/pal.xcodeproj/: project.pbxproj
tmp/precog.xcodeproj/: project.pbxproj
tmp/startup.xcodeproj/: project.pbxproj
vs/: gfc.vcxproj  gfc.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  lz4.vcxproj  lz4.vcxproj.filters  pal.vcxproj  pal.vcxproj.filters  precog.sln  precog.vcxproj  precog.vcxproj.filters  startup.vcxproj  startup.vcxproj.filters
win/: gfc.vcxproj  gfc.vcxproj.filters  lua.vcxproj  lua.vcxproj.filters  lz4.vcxproj  lz4.vcxproj.filters  pal.vcxproj  pal.vcxproj.filters  precog.sln  precog.vcxproj  precog.vcxproj.filters  startup.vcxproj  startup.vcxproj.filters
xc/gfc.xcodeproj/: project.pbxproj
xc/lua.xcodeproj/: project.pbxproj
xc/lz4.xcodeproj/: project.pbxproj
xc/pal.xcodeproj/: project.pbxproj
(+453 files in other folders)
